traefik/kuard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  namespace: default
  labels:
    app: kuard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-arm:1
          name: kuard
          ports:
            - name: web
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  ports:
  - port: 8080
    name: web
    protocol: TCP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kuard.wiseapp.xyz`)
      kind: Rule
      services:
        - name: kuard-service
          port: 8080
  tls:
    secretName: kuard-tls
